# tagil

./: README.md  oak_file.py  pyproject.toml
.github/workflows/: release.yaml  test.yaml
examples/asincio_app/: main.py
examples/enterprise_hello_world/: main.py
examples/init_and_destory/: main.py
examples/simple_app/: main.py
src/tagil/: __init__.py  application.py  decorators.py  exceptions.py  manager.py  singleton.py
tests/: test_manager.py
