[tool.poetry]
name = "tagil"
version = "0.2.0"
description = "Dependency injection library for python"
authors = ["Kirill Sulim <kirillsulim@gmail.com>"]
license = "mit"
readme = "README.md"
packages = [{include = "tagil", from = "src"}]

[tool.poetry.urls]
repository = "https://github.com/kirillsulim/tagil"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
oak-build = "^0.1.2"
pytest = "^7.1.3"
black = "^22.10.0"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
